{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "a23a5038-4483-082c-d91a-496a649bec84",
  "resources": [
    {
      "module": "module.default-common",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:loadbalancer/app/example-alb/dfb3a087f38746b0",
            "arn_suffix": "app/example-alb/dfb3a087f38746b0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-alb-1099378571.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:loadbalancer/app/example-alb/dfb3a087f38746b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028ecb8138bbaf03a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0811df42d5fb62450"
              },
              {
                "subnet_id": "subnet-0cea0579be35c640f"
              }
            ],
            "subnets": [
              "subnet-0811df42d5fb62450",
              "subnet-0cea0579be35c640f"
            ],
            "tags": {
              "Env": "example-env",
              "Name": "example-alb",
              "Resource": "lb"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example-alb",
              "Resource": "lb"
            },
            "vpc_id": "vpc-05a4c8a92c1fd157a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-common",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:listener/app/example-alb/dfb3a087f38746b0/fa153b2edaadae1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:listener/app/example-alb/dfb3a087f38746b0/fa153b2edaadae1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:loadbalancer/app/example-alb/dfb3a087f38746b0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Env": "example-env",
              "Name": "example-alb-http",
              "Resource": "http-listener"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example-alb-http",
              "Resource": "http-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-common.aws_lb.lb"
          ]
        }
      ]
    },
    {
      "module": "module.default-common",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:listener/app/example-alb/dfb3a087f38746b0/0210aa4135f83dce",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:021206237994:certificate/bc05a9e6-cbdc-4b4c-834f-fc42632a487f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:targetgroup/example-green-tg/8ffea94acffe76c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:listener/app/example-alb/dfb3a087f38746b0/0210aa4135f83dce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:loadbalancer/app/example-alb/dfb3a087f38746b0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Env": "example-env",
              "Name": "example-alb-https",
              "Resource": "https-listener"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example-alb-https",
              "Resource": "https-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-common.aws_lb.lb",
            "module.default-common.aws_lb_target_group.tgs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-common",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "blue",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:targetgroup/example-blue-tg/f0739f5b6c2a2f6a",
            "arn_suffix": "targetgroup/example-blue-tg/f0739f5b6c2a2f6a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:targetgroup/example-blue-tg/f0739f5b6c2a2f6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-blue-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "example-env",
              "Name": "example-blue-tg",
              "Resource": "tg"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example-blue-tg",
              "Resource": "tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05a4c8a92c1fd157a"
          },
          "create_before_destroy": true
        },
        {
          "index_key": "green",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:targetgroup/example-green-tg/8ffea94acffe76c1",
            "arn_suffix": "targetgroup/example-green-tg/8ffea94acffe76c1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:021206237994:targetgroup/example-green-tg/8ffea94acffe76c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-green-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "example-env",
              "Name": "example-green-tg",
              "Resource": "tg"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example-green-tg",
              "Resource": "tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05a4c8a92c1fd157a"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-common",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:021206237994:security-group/sg-0ac543d59ae6dffb1",
            "description": "example-ecs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac543d59ae6dffb1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028ecb8138bbaf03a"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028ecb8138bbaf03a"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "example-ecs-sg",
            "name_prefix": "",
            "owner_id": "021206237994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "example-env",
              "Name": "example",
              "Resource": "sg"
            },
            "tags_all": {
              "Env": "example-env",
              "Name": "example",
              "Resource": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a4c8a92c1fd157a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}